--- a/data/index.html
+++ b/data/index.html
@@ -9,8 +9,8 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <link rel="icon" href="favicon_io/favicon.ico" sizes="any">
     <link rel="icon" href="favicon_io/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="favicon_io/favicon.png""> <link rel=" manifest"
-        href="favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" href="favicon_io/favicon.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
     <style>
         /* Styles personnalisés pour une meilleure lisibilité */
         .card-shadow {
